--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="hello">Hello World, DemoActivity!</string>
-    <string name="app_name">Demo进</string>
+    <string name="app_name">魔镜</string>
 </resources>
